vuln-platform/deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vuln-platform
  labels:
    app.kubernetes.io/name: vuln-platform
